src/pages/HomePage.module.css
.aboutSection {
  padding: 10px;
  background-color: var(--white);
}
.container {
  display: grid;
  align-items: center;
  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
  gap: 10px;
}
h6 {
  text-transform: uppercase;
  text-align: center;
}
.leftSection h2 {
  font-size: var(--text-xxl);
}
.leftSection h2 span {
  color: var(--red);
}
.sectionHeader {
  color: var(--red);
}
.containerGrid {
  display: grid;
  padding: 20px;
  gap: 10px;
}
.cards {
  display: flex;
  align-items: center;
  background-color: var(--red-gradient);
  padding: 10px;
  border-radius: 5px;
  color: var(--red);
}
.cards .left {
  padding: 10px;
  font-size: var(--text-xxxl);
  color: var(--red);
}
.rightSection img {
  width: 50%;
  justify-self: center;
  display: flex;
}
.newsSection {
  padding: 10px;
}
.newsSection h2 {
  padding: 10px 0;
}
.newsSection .container {
  display: grid;
  gap: 20px;
  padding: 10px;
}
.card {
  background-color: var(--white);
  padding: 5px 20px;
  border-left: 5px solid var(--red);
  border-radius: 10px;
  gap: 10px;
  height: 250px;
}
.card h5 {
  padding: 5px;
  background-color: var(--red-gradient);
  color: var(--red);
  border-radius: 10px;
  text-align: center;
  width: 50%;
  margin: 10px 0;
}
.card h4 {
  padding: 10px 0;
}
.card p {
  color: var(--grey);
}
.card .date {
  margin: 15px 0;
  color: var(--grey);
  font-size: var(--text-sm);
}
.moreBox {
  width: 100%;
  padding: 10px;
}
.moreBox a {
  text-decoration: none;
  color: var(--red);
  text-align: center;
}
@media (min-width: 620px) {
  .containerGrid {
    grid-template-columns: 1fr 1fr;
  }
  .rightSection .container {
    grid-template-columns: 1fr 1fr;
  }
  .rightSection .container .cards {
    padding: 30px;
  }
  .newsSection .container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    padding: 10px;
  }
}
@media (min-width: 1280px) {
  h6 {
    text-align: left;
  }
  .newsSection .container .card {
    width: 600px;
  }
}

